Fix for bug 129655 ([ps] PostScript module device depth is 1bit). Patch by Roland.Mainz@informatik.med.uni-giessen.de. r=dcone, sr=attinasi.